<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_task"
        android:icon="@drawable/ic_task"
        android:title="@string/title_task" />

    <item
        android:id="@+id/create_task"
        android:icon="@drawable/ic_form_create"
        android:title="@string/title_form_create" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

    <!--<item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" /> -->
</menu>
