<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/login_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    tools:context="com.codebee.tradethrust.view.acitivity.LoginActivity">

    <TextView
        android:id="@+id/trade_thrust_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="Trade Thrust"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="10dp"
        android:theme="@style/TextLabel">
        <EditText
            android:id="@+id/email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/username_textview"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:passwordToggleEnabled="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_textview"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/auto_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="Remember Me"
        android:textColor="#888888"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@color/black"
        android:paddingTop="@dimen/signin_btn_padding_top"
        android:paddingBottom="@dimen/signin_btn_padding_bottom"
        android:layout_marginRight="@dimen/signin_btn_margin_right"
        android:layout_marginLeft="@dimen/signin_btn_margin_left"/>

    <TextView
        android:id="@+id/forget_password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="Forget Password?"
        android:textColor="#888888"
        android:textStyle="italic"
        android:textSize="12sp" />

</LinearLayout>
